# financial-reasoning

./: README.md  REPORT.md  pyproject.toml
reports/: chat_history.json  eval_accuracy_turns.jsonl  eval_self_turns.jsonl  profile-data.json
src/: main.py
src/data/: loader.py  profile.py
src/evaluation/: deepeval_eval.py  normalization.py
src/llm/: client.py
src/models/: answering.py  dataset.py  evaluation.py
src/prompts/: answer_system_prompt.txt  insufficient_context_message.txt  loader.py
src/services/: answer_service.py
src/utils/: arithmetic.py  logger.py
tests/: test_answer_service_deterministic.py  test_evaluation_deterministic.py
